--- a/Rechnerarchitektur/src/gui.fxml
+++ b/Rechnerarchitektur/src/gui.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -13,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GuiController">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GuiController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -44,8 +48,8 @@
             <Button fx:id="reset" disable="true" layoutX="172.0" layoutY="14.0" mnemonicParsing="false" onAction="#reset" text="Reset" />
             <TableView fx:id="codeTable" layoutX="441.0" layoutY="57.0" prefHeight="470.0" prefWidth="396.0" AnchorPane.bottomAnchor="23.0" AnchorPane.leftAnchor="441.0" AnchorPane.rightAnchor="27.0" AnchorPane.topAnchor="57.0">
                <columns>
-                  <TableColumn maxWidth="60.0" minWidth="60.0" prefWidth="89.5999755859375" text="Line" />
-                  <TableColumn prefWidth="254.40008544921875" text="Code" />
+                  <TableColumn fx:id="codeLine" editable="false" maxWidth="60.0" minWidth="32.0" prefWidth="32.0" sortable="false" text="Line" />
+                  <TableColumn fx:id="dataCode" editable="false" prefWidth="362.0" sortable="false" text="Code" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -68,18 +72,18 @@
             <Label layoutX="15.0" layoutY="123.0" text="W Register" />
             <TextField fx:id="wRegister" editable="false" layoutX="86.0" layoutY="119.0" prefHeight="26.0" prefWidth="94.0" />
             <Label layoutX="17.0" layoutY="82.0" prefHeight="18.0" prefWidth="53.0" text="Port B" />
-            <TableView fx:id="regTable" layoutX="15.0" layoutY="162.0" prefHeight="366.0" prefWidth="395.0" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="162.0">
+            <TableView fx:id="regTable" focusTraversable="false" layoutX="15.0" layoutY="162.0" prefHeight="366.0" prefWidth="396.0" AnchorPane.bottomAnchor="22.0" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="162.0">
               <columns>
-                <TableColumn prefWidth="75.0" text="Register" />
-                <TableColumn prefWidth="75.0" text="Hex" />
-                  <TableColumn maxWidth="30.0" minWidth="30.0" prefWidth="75.0" text="7" />
-                  <TableColumn maxWidth="30.0" minWidth="30.0" prefWidth="75.0" text="6" />
-                  <TableColumn maxWidth="30.0" minWidth="30.0" prefWidth="75.0" text="5" />
-                  <TableColumn maxWidth="30.0" minWidth="30.0" prefWidth="75.0" text="4" />
-                  <TableColumn maxWidth="30.0" minWidth="30.0" prefWidth="75.0" text="3" />
-                  <TableColumn maxWidth="30.0" minWidth="30.0" prefWidth="75.0" text="2" />
-                  <TableColumn maxWidth="30.0" minWidth="30.0" prefWidth="75.0" text="1" />
-                  <TableColumn maxWidth="30.0" minWidth="30.0" prefWidth="75.0" text="0" />
+                <TableColumn fx:id="reg" editable="false" prefWidth="75.0" sortable="false" text="Register" />
+                <TableColumn fx:id="hex" editable="false" prefWidth="75.0" sortable="false" text="Hex" />
+                  <TableColumn fx:id="reg7" editable="false" maxWidth="30.0" minWidth="30.0" prefWidth="75.0" sortable="false" text="7" />
+                  <TableColumn fx:id="reg6" editable="false" maxWidth="30.0" minWidth="30.0" prefWidth="75.0" sortable="false" text="6" />
+                  <TableColumn fx:id="reg5" editable="false" maxWidth="30.0" minWidth="30.0" prefWidth="75.0" sortable="false" text="5" />
+                  <TableColumn fx:id="reg4" editable="false" maxWidth="30.0" minWidth="30.0" prefWidth="75.0" sortable="false" text="4" />
+                  <TableColumn fx:id="reg3" editable="false" maxWidth="30.0" minWidth="30.0" prefWidth="75.0" sortable="false" text="3" />
+                  <TableColumn fx:id="reg2" editable="false" maxWidth="30.0" minWidth="30.0" prefWidth="75.0" sortable="false" text="2" />
+                  <TableColumn fx:id="reg1" editable="false" maxWidth="30.0" minWidth="30.0" prefWidth="75.0" sortable="false" text="1" />
+                  <TableColumn fx:id="reg0" editable="false" maxWidth="30.0" minWidth="30.0" prefWidth="75.0" sortable="false" text="0" />
               </columns>
             </TableView>
             <Label fx:id="runtime" layoutX="240.0" layoutY="18.0" prefHeight="18.0" prefWidth="168.0" text="Runtime: " />
